Add description for 'full-width' & 'space-off' classes

--- a/src/index.html
+++ b/src/index.html
@@ -212,6 +212,16 @@
 					    <td data-th="Type" class="comment">Cross-device reaction</td>
 					    <td data-th="Description">Hides the column if the width of the screen <= 500px. Use in combination with the viewport tag!</td>
 					</tr>
+					<tr>
+					    <td data-th="Class" class="value">.full-width</td>
+					    <td data-th="Type" class="comment">Clear space item (col)</td>
+					    <td data-th="Description">This class clear space between items (cols), useful if you want to create stuff that will take up the entire page.</td>
+					</tr>
+					<tr>
+					    <td data-th="Class" class="value">.space-off</td>
+					    <td data-th="Type" class="comment">Clear space container (row)</td>
+					    <td data-th="Description">By adding both the full-width and the space-off classes, you can do some pretty epic stuff!. You can really make good use of the entire page</td>
+					</tr>
 				</table>
 			</div>
 		</div>
